# nccl

./: .clang-format  CMakeLists.txt  main.cpp
src/: bootstrap.cc  init.cc  nccl.h
src/include/: comm.h  devcomm.h  net.h  p2p.h  socket.h
src/misc/: utils.cc
